--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "gulp-autoprefixer": "^7.0.1",
         "gulp-clean-css": "^4.2.0",
         "gulp-cli": "^2.2.0",
+        "gulp-htmlmin": "^5.0.1",
+        "gulp-imagemin": "^6.1.1",
         "gulp-rename": "^1.4.0",
         "gulp-sass": "^4.0.2"
     },
